--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "backend1",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "dev":"node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
